// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic gsheet functions -- read should convert grid to a json object 1`] = `
Array [
  Object {
    "Address": "1098 Evangelista st. Makati, Philippines 1227",
    "Amount": "10,000",
    "Barcode": "9871234567892",
    "Customer Name:": "United Pharmacy",
    "Customer No.:": "10000001",
    "Delivery Order No.:": "3000000001",
    "Description": "Biogesic Tablet 500mg",
    "Item No.": "10",
    "No of Box": "1",
    "No. of Boxes": "10",
    "Product": "1000000010",
    "Qty": "10",
    "Shipment No.:": "5000000001",
    "Status": "1",
    "UoM": "box",
    "rowIdx": 1,
  },
  Object {
    "Address": "1098 Evangelista st. Makati, Philippines 1227",
    "Amount": "50,000",
    "Barcode": "9123456748212",
    "Customer Name:": "United Pharmacy",
    "Customer No.:": "10000001",
    "Delivery Order No.:": "3000000001",
    "Description": "Solmux Capsule 500mg",
    "Item No.": "20",
    "No of Box": "2",
    "No. of Boxes": "10",
    "Product": "1000000011",
    "Qty": "50",
    "Shipment No.:": "5000000001",
    "Status": undefined,
    "UoM": "box",
    "rowIdx": 2,
  },
  Object {
    "Address": "1098 Evangelista st. Makati, Philippines 1227",
    "Amount": "65,000",
    "Barcode": "7634567812349",
    "Customer Name:": "United Pharmacy",
    "Customer No.:": "10000001",
    "Delivery Order No.:": "3000000002",
    "Description": "Cherifier Syrup 500mg",
    "Item No.": "30",
    "No of Box": "3",
    "No. of Boxes": "10",
    "Product": "1000000051",
    "Qty": "100",
    "Shipment No.:": "5000000001",
    "Status": "halaka",
    "UoM": "Bot",
    "rowIdx": 3,
  },
  Object {
    "Address": "1098 Evangelista st. Makati, Philippines 1227",
    "Amount": "50,000",
    "Barcode": "9123456748212",
    "Customer Name:": "United Pharmacy",
    "Customer No.:": "10000001",
    "Delivery Order No.:": "3000000001",
    "Description": "Solmux Capsule 500mg",
    "Item No.": "20",
    "No of Box": "2",
    "No. of Boxes": "10",
    "Product": "1000000011",
    "Qty": "50",
    "Shipment No.:": "5000000002",
    "Status": undefined,
    "UoM": "box",
    "rowIdx": 4,
  },
  Object {
    "Address": "1098 Evangelista st. Makati, Philippines 1227",
    "Amount": "65,000",
    "Barcode": "7634567812349",
    "Customer Name:": "United Pharmacy",
    "Customer No.:": "10000001",
    "Delivery Order No.:": "3000000001",
    "Description": "Cherifier Syrup 500mg",
    "Item No.": "30",
    "No of Box": "3",
    "No. of Boxes": "10",
    "Product": "1000000051",
    "Qty": "100",
    "Shipment No.:": "5000000002",
    "Status": undefined,
    "UoM": "Bot",
    "rowIdx": 5,
  },
]
`;

exports[`basic gsheet functions -- read should get unique keys 1`] = `
Array [
  Object {
    "items": Array [
      Object {
        "Address": "1098 Evangelista st. Makati, Philippines 1227",
        "Amount": "10,000",
        "Barcode": "9871234567892",
        "Customer Name:": "United Pharmacy",
        "Customer No.:": "10000001",
        "Delivery Order No.:": "3000000001",
        "Description": "Biogesic Tablet 500mg",
        "Item No.": "10",
        "No of Box": "1",
        "No. of Boxes": "10",
        "Product": "1000000010",
        "Qty": "10",
        "Shipment No.:": "5000000001",
        "Status": "1",
        "UoM": "box",
        "rowIdx": 1,
      },
      Object {
        "Address": "1098 Evangelista st. Makati, Philippines 1227",
        "Amount": "50,000",
        "Barcode": "9123456748212",
        "Customer Name:": "United Pharmacy",
        "Customer No.:": "10000001",
        "Delivery Order No.:": "3000000001",
        "Description": "Solmux Capsule 500mg",
        "Item No.": "20",
        "No of Box": "2",
        "No. of Boxes": "10",
        "Product": "1000000011",
        "Qty": "50",
        "Shipment No.:": "5000000001",
        "Status": undefined,
        "UoM": "box",
        "rowIdx": 2,
      },
    ],
    "key": Object {
      "Delivery Order No.:": "3000000001",
      "Shipment No.:": "5000000001",
    },
  },
  Object {
    "items": Array [
      Object {
        "Address": "1098 Evangelista st. Makati, Philippines 1227",
        "Amount": "65,000",
        "Barcode": "7634567812349",
        "Customer Name:": "United Pharmacy",
        "Customer No.:": "10000001",
        "Delivery Order No.:": "3000000002",
        "Description": "Cherifier Syrup 500mg",
        "Item No.": "30",
        "No of Box": "3",
        "No. of Boxes": "10",
        "Product": "1000000051",
        "Qty": "100",
        "Shipment No.:": "5000000001",
        "Status": "halaka",
        "UoM": "Bot",
        "rowIdx": 3,
      },
    ],
    "key": Object {
      "Delivery Order No.:": "3000000002",
      "Shipment No.:": "5000000001",
    },
  },
  Object {
    "items": Array [
      Object {
        "Address": "1098 Evangelista st. Makati, Philippines 1227",
        "Amount": "50,000",
        "Barcode": "9123456748212",
        "Customer Name:": "United Pharmacy",
        "Customer No.:": "10000001",
        "Delivery Order No.:": "3000000001",
        "Description": "Solmux Capsule 500mg",
        "Item No.": "20",
        "No of Box": "2",
        "No. of Boxes": "10",
        "Product": "1000000011",
        "Qty": "50",
        "Shipment No.:": "5000000002",
        "Status": undefined,
        "UoM": "box",
        "rowIdx": 4,
      },
      Object {
        "Address": "1098 Evangelista st. Makati, Philippines 1227",
        "Amount": "65,000",
        "Barcode": "7634567812349",
        "Customer Name:": "United Pharmacy",
        "Customer No.:": "10000001",
        "Delivery Order No.:": "3000000001",
        "Description": "Cherifier Syrup 500mg",
        "Item No.": "30",
        "No of Box": "3",
        "No. of Boxes": "10",
        "Product": "1000000051",
        "Qty": "100",
        "Shipment No.:": "5000000002",
        "Status": undefined,
        "UoM": "Bot",
        "rowIdx": 5,
      },
    ],
    "key": Object {
      "Delivery Order No.:": "3000000001",
      "Shipment No.:": "5000000002",
    },
  },
]
`;
